--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="js/scripts.js">
-
-    </script>
-    <title></title>
+    <title>Calculator</title>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-
+    <h1>Calculator</h1>
   </body>
 </html>
