--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Calculator</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css" type="text.css">
+    <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
+    <title>Calculator</title>
   </head>
   <body>
     <h1>Calculator</h1>
