--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Calculator</title>
   </head>
   <body>
-    <h1>Calculator</h1>
+    <div class="container" id="add">
+      <h1>Calculator</h1>
+      <form>
+        <div class="form-group">
+          <label for="add1">1st number:</label>
+          <input id="add1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="add2">2nd number:</label>
+          <input id="add2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn btn-success">Add!</button>
+      </form>
+    </div>
   </body>
 </html>
