--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Calculator</title>
   </head>
   <body>
-    <div class="container" id="add">
-      <h1>Calculator</h1>
-      <form>
+    <div class="container">
+<!-- Addition-->
+      <h1>Add</h1>
+      <form id="add">
         <div class="form-group">
           <label for="add1">1st number:</label>
           <input id="add1" class="form-control" type="text">
@@ -21,6 +22,63 @@
         </div>
         <button type="submit" class="btn btn-success">Add!</button>
       </form>
+      <div id="addAnswer">
+      </div>
     </div>
+<!--Subtraction-->
+
+    <div class="container">
+      <h1>Subtract</h1>
+      <form id="sub">
+        <div class="form-group">
+          <label for="sub1">1st number:</label>
+          <input id="sub1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="sub2">2nd number:</label>
+          <input id="sub2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn btn-success">Subtract!</button>
+      </form>
+      <div id="subAnswer">
+      </div>
+    </div>
+
+<!--Multiply-->
+    <!-- <div class="container">
+      <h1>Multiply</h1>
+      <form id="mult">
+        <div class="form-group">
+          <label for="mult1">1st number:</label>
+          <input id="mult1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="mult2">2nd number:</label>
+          <input id="mult2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn btn-success">Multiply!</button>
+      </form>
+      <div id="multAnswer">
+      </div>
+    </div> -->
+
+<!--Divide-->
+    <!-- <div class="container">
+      <h1>Add</h1>
+      <form id="mult">
+        <div class="form-group">
+          <label for="mult1">1st number:</label>
+          <input id="mult1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="mult2">2nd number:</label>
+          <input id="mult2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn btn-success">Multiply!</button>
+      </form>
+      <div id="multAnswer">
+      </div>
+    </div>
+     -->
   </body>
 </html>
