--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
 <!--Multiply-->
-    <!-- <div class="container">
+    <div class="container">
       <h1>Multiply</h1>
       <form id="mult">
         <div class="form-group">
@@ -60,7 +60,7 @@
       </form>
       <div id="multAnswer">
       </div>
-    </div> -->
+    </div>
 
 <!--Divide-->
     <!-- <div class="container">
