create our division section of our webpage, fix bugs

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
     </div>
 
 <!--Divide-->
-    <!-- <div class="container">
-      <h1>Add</h1>
-      <form id="mult">
+    <div class="container">
+      <h1>Divide</h1>
+      <form id="div">
         <div class="form-group">
-          <label for="mult1">1st number:</label>
-          <input id="mult1" class="form-control" type="text">
+          <label for="div1">1st number:</label>
+          <input id="div1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="mult2">2nd number:</label>
-          <input id="mult2" class="form-control" type="text">
+          <label for="div2">2nd number:</label>
+          <input id="div2" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn btn-success">Multiply!</button>
+        <button type="submit" class="btn btn-success">Divide</button>
       </form>
-      <div id="multAnswer">
+      <div id="divAnswer">
       </div>
     </div>
-     -->
+
   </body>
 </html>
