--- a/index.html
+++ b/index.html
@@ -9,76 +9,45 @@
   </head>
   <body>
     <div class="container">
-<!-- Addition-->
+
       <h1>Add</h1>
-      <form id="add">
+      <form id="calculator">
         <div class="form-group">
-          <label for="add1">1st number:</label>
-          <input id="add1" class="form-control" type="text">
+          <label for="input1">1st number:</label>
+          <input id="input1" class="form-control" type="text">
         </div>
         <div class="form-group">
-          <label for="add2">2nd number:</label>
-          <input id="add2" class="form-control" type="text">
+          <label for="input2">2nd number:</label>
+          <input id="input2" class="form-control" type="text">
         </div>
-        <button type="submit" class="btn btn-success">Add!</button>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="add" checked>
+            Add
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="subtract">
+            Subtract
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="multiply">
+            Multiply
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="operator" value="divide">
+            Divide
+          </label>
+        </div>
+        <button type="submit" class="btn btn-success">Go!</button>
       </form>
-      <div id="addAnswer">
+      <div id="output">
       </div>
     </div>
-<!--Subtraction-->
-
-    <div class="container">
-      <h1>Subtract</h1>
-      <form id="sub">
-        <div class="form-group">
-          <label for="sub1">1st number:</label>
-          <input id="sub1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="sub2">2nd number:</label>
-          <input id="sub2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn btn-success">Subtract!</button>
-      </form>
-      <div id="subAnswer">
-      </div>
-    </div>
-
-<!--Multiply-->
-    <div class="container">
-      <h1>Multiply</h1>
-      <form id="mult">
-        <div class="form-group">
-          <label for="mult1">1st number:</label>
-          <input id="mult1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="mult2">2nd number:</label>
-          <input id="mult2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn btn-success">Multiply!</button>
-      </form>
-      <div id="multAnswer">
-      </div>
-    </div>
-
-<!--Divide-->
-    <div class="container">
-      <h1>Divide</h1>
-      <form id="div">
-        <div class="form-group">
-          <label for="div1">1st number:</label>
-          <input id="div1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="div2">2nd number:</label>
-          <input id="div2" class="form-control" type="text">
-        </div>
-        <button type="submit" class="btn btn-success">Divide</button>
-      </form>
-      <div id="divAnswer">
-      </div>
-    </div>
-
   </body>
 </html>
